@@ -197,6 +197,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\lib\UriFile.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\lib\UriIp4.c"
 				>
 			</File>
