@@ -1,5 +1,6 @@
 ???
 
+  * Added: Unix/Windows filename <-> URI string conversion helpers
   * Fixed: Bug in ToString for URIs with scheme, path, but no host (e.g. "f:/.//g")
   * Fixed: AddBase now resolves ".//g" with base "f:/a" to "f:/.//g" instead of
       "f://g" which would result in "g" becoming the authority part when parsing
